Add error display and messaging

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -69,6 +69,8 @@
         role="dialog"
         aria-labelledby="summary-bar"
       ></div>
+
+      <div id="error-message" class="error hidden" role="alert"></div>
     </div>
     <script type="module" src="main.js"></script>
   </body>
