style: theme variables

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
       <img src="blockxpand_logo.svg" alt="BlockXpand" class="logo" />
       <h1 class="tagline">Never miss a crypto reward again</h1>
       <p id="principal">Not connected</p>
-      <button id="connectBtn" class="btn">Connect Wallet</button>
+      <button id="connectBtn" class="btn connect-btn">Connect Wallet</button>
 
       <div
         id="logo-spinner"
@@ -23,7 +23,7 @@
         aria-live="polite"
       >
         <svg viewBox="0 0 64 64" width="80" height="80" aria-hidden="true">
-          <g class="logo-animation" fill="#8355e2">
+          <g class="logo-animation" fill="var(--accent-start)">
             <!-- Bottom squares -->
             <rect x="8" y="48" width="8" height="8" />
             <rect x="48" y="48" width="8" height="8" />
