--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,16 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BlockXpand Rewards</title>
     <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <script>
       window.CANISTER_ID = "<CANISTER_ID>";
     </script>
   </head>
   <body>
     <div class="container">
-      <img src="blockxpand_logo.svg" alt="BlockXpand" class="logo" />
+      <img id="main-logo" src="blockxpand copy_w.png" alt="BlockXpand logo" class="logo" />
       <h1 class="tagline">Never miss a crypto reward again</h1>
       <p id="principal">Not connected</p>
       <button id="connectBtn" class="btn connect-btn">Connect Wallet</button>
+      <button id="theme-toggle" class="btn theme-toggle" aria-label="Toggle light or dark mode">Toggle Theme</button>
 
       <div
         id="logo-spinner"
@@ -22,32 +27,12 @@
         role="status"
         aria-live="polite"
       >
-        <svg viewBox="0 0 64 64" width="80" height="80" aria-hidden="true">
-          <g class="logo-animation" fill="var(--accent-start)">
-            <!-- Bottom squares -->
-            <rect x="8" y="48" width="8" height="8" />
-            <rect x="48" y="48" width="8" height="8" />
-            <!-- Middle squares -->
-            <rect x="24" y="40" width="8" height="8" />
-            <rect x="32" y="40" width="8" height="8" />
-            <!-- Center cross -->
-            <rect x="24" y="32" width="8" height="8" />
-            <rect x="32" y="32" width="8" height="8" />
-            <rect x="16" y="32" width="8" height="8" />
-            <rect x="40" y="32" width="8" height="8" />
-            <!-- Upper squares -->
-            <rect x="16" y="24" width="8" height="8" />
-            <rect x="40" y="24" width="8" height="8" />
-            <rect x="8" y="16" width="8" height="8" />
-            <rect x="48" y="16" width="8" height="8" />
-            <!-- Dispersed top squares -->
-            <rect x="20" y="8" width="4" height="4" />
-            <rect x="30" y="10" width="4" height="4" />
-            <rect x="38" y="6" width="4" height="4" />
-            <rect x="46" y="10" width="4" height="4" />
-          </g>
-        </svg>
-        <span class="sr-only">Loading…</span>
+        <img
+          src="blockxpand copy logo only_v2.png"
+          alt=""
+          class="spinner-img"
+          aria-hidden="true"
+        />
       </div>
 
       <div id="summary-skeleton" class="summary-skeleton hidden" aria-hidden="true"></div>
@@ -73,5 +58,21 @@
       <div id="error-message" class="error hidden" role="alert"></div>
     </div>
     <script type="module" src="main.js"></script>
+    <script>
+      const logo = document.getElementById('main-logo');
+      const toggleBtn = document.getElementById('theme-toggle');
+      function setLogo() {
+        if (document.body.classList.contains('light')) {
+          logo.src = 'blockxpand copy.png';
+        } else {
+          logo.src = 'blockxpand copy_w.png';
+        }
+      }
+      toggleBtn.addEventListener('click', () => {
+        document.body.classList.toggle('light');
+        setLogo();
+      });
+      setLogo();
+    </script>
   </body>
 </html>
