Refine hero design and 3D scene

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
   <section class="hero">
     <h1 class="wordmark">blockxpand</h1>
     <button id="connect" class="connect-btn">Connect Wallet</button>
-    <p class="tagline">Unlock hidden value across your tokens</p>
+    <p class="tagline">Unlock the rewards you didn’t know you had.</p>
   </section>
   <script type="module" src="main.js"></script>
 </body>
