--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BlockXpand</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="top-bar">
@@ -13,9 +14,9 @@
   </header>
   <canvas id="scene"></canvas>
   <section class="hero">
-    <h1 class="wordmark">blockxpand</h1>
+    <img src="images/blockxpand_copy_w.png" alt="BlockXpand logo" class="hero-logo">
+    <p class="hero-tagline">Unlock hidden value across your tokens</p>
     <button id="connect" class="connect-btn">Connect Wallet</button>
-    <p class="tagline">Unlock the rewards you didn’t know you had.</p>
   </section>
   <script type="module" src="main.js"></script>
 </body>
