Refine hero design and fix GLB path

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,9 +14,9 @@
   </header>
   <canvas id="scene"></canvas>
   <section class="hero">
-    <img src="images/blockxpand_copy_w.png" alt="BlockXpand logo" class="hero-logo">
-    <p class="hero-tagline">Unlock hidden value across your tokens</p>
+    <h1 class="wordmark">blockxpand</h1>
     <button id="connect" class="connect-btn">Connect Wallet</button>
+    <p class="tagline">Unlock the rewards you didn’t know you had.</p>
   </section>
   <script type="module" src="main.js"></script>
 </body>
